app/assets/stylesheets/10_restaurant.scss
.restaurant-page-container {
  padding-top: 96px;
}

.restaurant-banner {
  min-height: 120px;
  height: 13vh;
  max-width: 100vw;
  width: 100vw;
  object-fit: cover;
  background-color: brown;
}

.restaurant-page-name {
  width: auto;
  font-size: 40px;
  padding-top: 30px;
  padding-bottom: 5px;
  padding-left: 30px;
}

.restaurant-small {
  width: auto;
  padding-left: 30px;
}

.menu-items-wrapper {
  position: absolute;
  width: 70%;
  right: 0;
  padding-right: 20px;
}

.menu-items-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 30px;
}

.menu-item-container {
  padding: 5px;
  position: relative;
  cursor: pointer;
}

.menu-item-container:hover {
  box-shadow: 0px 0px 10px 10px rgba(117, 117, 117, 0.1)
}

.menu-item-info {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2);
  grid-template-rows: auto auto auto;
}

.menu-item-info:hover > .menu-item-photo {
  transform: scale(1.1)
}

.menu-item-photo {
  position: relative;
  transition: transform .4s ease-in-out;
  transform: scale(1);
  object-fit: cover;
  justify-self: end;
  height: 150px;
  width: 250px;
  background-color: black;
  grid-area: 1 / 2 / 4 / 3;
}

.menu-item-name {
  font-size: 18px;
  grid-area: 1 / 1 / 2 / 2;
}

.menu-item-price {
  align-self: start;
  font-family: "Uber Regular";
  font-size: 14px;
  grid-area: 2 / 1 / 3 / 2;
}

.menu-item-description {
  font-family: "Uber Light";
  width: 90%;
  align-self: start;
  height: auto;
  color: rgb(117, 117, 117);
  font-size: 14px;
  grid-area: 3 / 1 / 4 / 2;
  word-wrap: normal;
}

.menu-open-item {
  position: absolute;
  top: 10px;
  right: 10px;
  height: 35px;
  color: white;
  display: block;
  text-align: center;
  background-color: black;
  outline: white 1px solid;
  border-radius: 30px;
  width: 35px;
}

.menu-add-to-cart:hover {
  background-color: grey;
}

.menu-add-to-cart-nophoto {
  position: relative;
  top: 5%;
  left: 91%;
  color: white;
  display: block;
  font-size: 30px;
  text-align: center;
  background-color: black;
  outline: white 1px solid;
  border-radius: 30px;
  padding-left: 5px;
  padding-right: 5px;
  width: 35px;
}

.menu-add-to-cart-nophoto:hover {
  background-color: grey;
}

